--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,4 @@ crashlytics-build.properties
 
 # Unity Game Resoruces
 /[Aa]ssets/Low Poly Hexagon Tiles - Cartoon Pack/
+/[Aa]ssets/RPG Monster DUO PBR Polyart/
