--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,5 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 
 # Unity Game Resoruces
-/[Aa]ssets/Low Poly Hexagon Tiles - Cartoon Pack/
-/[Aa]ssets/RPG Monster DUO PBR Polyart/
+/[Aa]ssets/ExternalAssets/
 /[Aa]ssets/Plugins/Demigiant/
